Re-evaluate media queries for initial style changes.

If the default font-size changed, and media queries have font relative
lengths, then media query evaluations may have changed.

Bug: 830119
Change-Id: I912adddcdbd05b729678cff14d16245a35bca3e1
Reviewed-on: https://chromium-review.googlesource.com/1000852
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550606}
Former-commit-id: 7d899e4f29364d1337e51aa9bb133dd25a2fc389